# DiscordSlaveBot

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
SlaveBotCore/: CMakeLists.txt
SlaveBotCore/includes/SlaveBot/: SlaveBot.hpp
SlaveBotCore/includes/SlaveBot/tlib/: Timer.hpp  uoft.hpp
SlaveBotCore/includes/SlaveBot/utils/: Log.hpp  Utils.hpp
SlaveBotCore/src/sources/: SlaveBot.cpp  uoft.cpp
SlaveBotEditor/: CMakeLists.txt
SlaveBotEditor/src/: main.cpp
